--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   top_snackbar_flutter: ^1.0.0
   cupertino_icons: ^1.0.2
   image_picker: ^0.7.5+3
+  shamsi_date: ^0.15.0
 
 dev_dependencies:
   flutter_test:
